@startuml

class Room {
    +ID: int
    +OPPOSITE: dict
    -_id: int
    -_exits: dict
    +__init__()
    +add_exit(exitRoom, direction)
    +Print()
}

class Module {
    -_hObj
    -_name: str
    -_startRoom: Room
    +__init__(hNWNObj)
    +Update()
    +Commit()
    +Name(name=None)
    +list_rooms()
}

class Nocturne {
    +_classID: int
    +_moduledata: dict
    +_gameFile: str
    +_module: Module
    +init()
    +show_intro()
    +main_menu()
    +main()
    +rename_world(new_name)
    +edit_world()
    +save_game()
    +load_game()
    +list_rooms()
}

class MoeSzyslakLibrary

' Relationships
Nocturne --> Module : manages
Module --> Room : has start room
Room --> Room : exits
Module --> MoeSzyslakLibrary : uses
Nocturne --> MoeSzyslakLibrary : uses

@enduml